[SWBIT-2627] Support HW LED Test + Others

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "Luis Antonio Gonzalez <luisantonio.gonzalez@bq.com>",
         "Natalia Gómez <natalia.gomez@bq.com>",
         "Sergio Morcuende <sergio.morcuende@bq.com> (http://smorcuend.es)",
-        "Alvaro Sanchez <alvaro.sanchez@bq.com>"
+        "Alvaro Sanchez <alvaro.sanchez@bq.com>",
+        "Alvaro Almendreos <alvaro.almendros@bq.com"
     ],
     "repository": {
         "type": "git",
