add: new board bqZUM 2.0

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "Natalia Gómez <natalia.gomez@bq.com>",
         "Sergio Morcuende <sergio.morcuende@bq.com> (http://smorcuend.es)",
         "Alvaro Sanchez <alvaro.sanchez@bq.com>",
-        "Alvaro Almendreos <alvaro.almendros@bq.com"
+        "Alvaro Almendreos <alvaro.almendros@bq.com",
+        "Mikel Fernandez <mikelfer@gmail.com>",
+        "Pablo Moncada <pablo.moncada@bq.com>"
     ],
     "repository": {
         "type": "git",
