--- a/bower.json
+++ b/bower.json
@@ -64,7 +64,8 @@
     "ng-pattern-restrict": "^0.2.3",
     "angular-color-picker": "^1.0.11",
     "ng-csv": "^0.3.6",
-    "bloqs": "^0.29.2"
+    "bloqs": "^0.29.2",
+    "google-blockly": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.x"
