--- a/bower.json
+++ b/bower.json
@@ -65,7 +65,7 @@
     "angular-color-picker": "^1.0.11",
     "ng-csv": "^0.3.6",
     "bloqs": "^0.29.2",
-    "google-blockly": "*"
+    "blockly": "https://github.com/google/blockly.git"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.x"
